fix: align the search button with other icons (#1620)
* test: display the search button for demo purposes

* fix: only display the search icon

* fix: remove needless adjustements

* fix: rollback to default search

* chore: trigger CI

--- a/src/pydata_sphinx_theme/assets/styles/components/_search.scss
+++ b/src/pydata_sphinx_theme/assets/styles/components/_search.scss
@@ -75,8 +75,6 @@
   align-items: center;
   align-content: center;
   color: var(--pst-color-text-muted);
-  // Needed to match other icons hover
-  padding: 0 0 0.25rem 0;
   border-radius: 0;
   @include icon-navbar-hover;
   @include focus-indicator;
